[package]
name = "fcp_switching"
version = "0.1.0"
authors = ["Valentin Lorentz <progval+fcp@progval.net>"]
description = "Implementation of the Futuristic Connectivity Protocol's Switching algorithms and decoders."
license = "MIT"
repository = "https://github.com/rust-fcp/rust-fcp-switching"
readme = "README.md"

[dependencies]
byteorder = "^0.5.3"
hex = "^0.2.0"
simple_bencode = "^0.1.4"

[dev-dependencies]
fcp_cryptoauth = "^0.1.0"
rand = "^0.3.15"
